--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-server.port: 9000
-management.server.port: 9001
-management.server.address: 127.0.0.1
-management.endpoints.web.exposure.include=info, health, metrics
+server.port = 9000
+management.server.port = 9001
+management.server.address = 127.0.0.1
+management.endpoints.web.exposure.include =info, health, metrics
 
-poc.input-dir: data/source
-poc.output-dir: data/target
+poc.input-dir  = data/source
+poc.output-dir = data/target
+
+poc.pgp.private-key-path = file:./data/pgp/private.gpg
+poc.pgp.key-user-id      = foo.bar@acme.org
+poc.pgp.password         = woot
